editing pins works if pin owner
